Fixed Categories (List) block center alignment in editor side

--- a/packages/block-library/src/categories/editor.scss
+++ b/packages/block-library/src/categories/editor.scss
@@ -5,3 +5,6 @@
 		margin-top: 6px;
 	}
 }
+[data-align="center"] .wp-block-categories{
+    text-align: center;
+}
